--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,4 +1,6 @@
 <%- include('../includes/head', {pageTitle: 'Signup' }) %>
+    <link rel="stylesheet" href="/styles/forms.css">
+    <link rel="stylesheet" href="/styles/auth.css">
     </head>
 
     <body>
@@ -12,11 +14,7 @@
                     </p>
                     <p>
                         <label for="confirm-email">Confirm Email</label>
-                        <input 
-                            type="email" 
-                            id="confirm-email" 
-                            name="confirm-email" 
-                            required>
+                        <input type="email" id="confirm-email" name="confirm-email" required>
                     </p>
                     <p>
                         <label for="password">Password</label>
