--- a/views/customer/includes/head.ejs
+++ b/views/customer/includes/head.ejs
@@ -10,6 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/base.css">
-
-
+    <link rel="stylesheet" href="/styles/base.css" />
+  </head>
+</html>
