--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,11 +1,11 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 
-    --color-gray-50: rgb(243, 236, 230);
+  --color-gray-50: rgb(243, 236, 230);
   --color-gray-100: rgb(207, 201, 195);
   --color-gray-300: rgb(99, 92, 86);
   --color-gray-400: rgb(70, 65, 60);
@@ -27,4 +27,3 @@ html {
 
   --color-primary-500-bg: rgb(63, 60, 58);
 }
-
