--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -37,7 +37,7 @@
                         <label for="city">City</label>
                         <input type="text" id="city" name="city" required>
                     </p>
-                    <button class="button">Create Account</button>
+                    <button class="btn">Create Account</button>
                     <p id="switch-form"><a href="/login">Login instead</a></p>
                 </form>
             </main>
