--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,4 +1,10 @@
 <header>
     <div><a href="/">WDE</a></div>
-    <nav></nav>
+    <nav>
+        <ul>
+            <% if(locals.isAuth) { %>
+            <li><button>logout</button></li>
+            <% } %>
+        </ul>
+    </nav>
 </header>
