add form to logout button

--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -3,7 +3,12 @@
     <nav>
         <ul>
             <% if(locals.isAuth) { %>
-            <li><button>logout</button></li>
+            <li>
+                <form action="/logout" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+                    <button>logout</button>
+                </form>
+            </li>
             <% } %>
         </ul>
     </nav>
