--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -11,5 +11,4 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/base.css" />
-  </head>
-</html>
+    <link rel="stylesheet" href="/styles/navigation.css">
