--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -42,3 +42,23 @@
     height: .25rem;
     background-color: var(--color-gray-100);
 }
+
+@media(min-width: 48rem) {
+    #mobile-menu-btn {
+        display: none;
+    } 
+
+    #mobile-menu {
+        display: none;
+    }
+
+    .nav-items a {
+       padding: var(--space-2) var(--space-4);
+       border-radius: var(--border-radius-small); 
+    }
+
+    .nav-items a:hover,
+    .nav-items a:active {
+        background-color: var(--color-primary-500-bg);
+    } 
+}
