--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,7 +1,7 @@
 <ul class="nav-items">
     <% if (!locals.isAdmin) { %>
     <li><a href="/">Shop</a></li>
-    <li><a href="/card">Card</a></li>
+    <li><a href="/cart">Cart</a></li>
     <% }%>    
 
     <% if (locals.isAuth && !locals.isAdmin) { %>
