--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -6,7 +6,7 @@
         <%- include('../../shared//includes/header') %>
             <main>
                 <h1>Update Product</h1>
-                <%- include('includes/product-form', { submitPath: 'admin/products/' + product.id})%>
+                <%- include('includes/product-form', { submitPath: 'admin/products/' + product.id, product: product})%>
             </main>
 
 <%- include('../../shared/includes/footer') %>
