--- a/views/admin/products/includes/product-form.ejs
+++ b/views/admin/products/includes/product-form.ejs
@@ -6,7 +6,7 @@
     </p>
     <p>
         <label for="image">Image</label>
-        <input type="file" id="image" name="image" accept="image/png, image/jpg">
+        <input type="file" id="image" name="image" accept="image/png, image/jpg" <% if(imageRequired) {%> required <% }%>>
     </p>
     <p>
         <label for="summary">Summary</label>
@@ -18,7 +18,7 @@
     </p>
     <p>
         <label for="description">Description</label>
-        <textarea id="description" name="description"  rows="7" required><%= product.description%>"</textarea>
+        <textarea id="description" name="description"  rows="7" required><%= product.description%></textarea>
     </p>
 
     <p>
