--- a/views/admin/products/new-products.ejs
+++ b/views/admin/products/new-products.ejs
@@ -6,12 +6,14 @@
         <%- include('../../shared//includes/header') %>
             <main>
                 <h1>Add New Product</h1>
-                <%- include('includes/product-form', { submitPath: 'admin/products/', product: {
+                <%- include('includes/product-form', { submitPath: '/admin/products/', product: {
                     title: '',
                     summary: '',
                     price: '',
                     description: ''
-                }})%>
+                },
+                imageRequired: true
+            })%>
             </main>
 
 <%- include('../../shared/includes/footer') %>
