--- a/views/shared/404.ejs
+++ b/views/shared/404.ejs
@@ -5,7 +5,7 @@
         <%- include('includes/header') %>
             <main>
                 <h1>Could not find resource</h1>
-                <p>Unfortunatly, we could not find the requested resoure</p>
+                <p>Unfortunatly, we could not find the requested resoure!</p>
                 <p><a class="btn" href="/">Back to safety!</a></p>
             </main>
 
