--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -5,7 +5,7 @@
     </head>
 
     <body> 
-        <%- include('../../shared//includes/header') %>
+        <%- include('../../shared/includes/header') %>
             <main id="product-details">
                 <header>
                     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
