--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <%- include('../../shared//includes/header') %>
+        <%- include('../../shared/includes/header') %>
             <main>
                 <h1>Your Cart</h1>
                 <ul id="cart-items">
@@ -19,8 +19,9 @@
                     
                     <% if(locals.isAuth) { %>
                     <form action="/orders" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
                         <button class="btn">Buy Products</button>
-                    </form>
+                    </form>s
                     <% }  else { %>
                         <p id="cart-total-fallback">Log in to proceed and purchase the items</p> 
 
