--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -3,7 +3,7 @@
     </head>
 
     <body>
-        <%- include('../../shared//includes/header') %>
+        <%- include('../../shared/includes/header') %>
             <main>
                 <h1>All Products</h1>
                 <ul id="products-grid">
